--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -19,6 +19,7 @@
     "fontawesome": "^5.6.3",
     "install": "^0.13.0",
     "mongoose": "^7.5.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
