--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
     "firebase": "^10.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "nodemailer": "^6.9.4",
+    "nodemailer": "^6.9.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
